[Offline pages] Moving disk size related calls to Archive Manager, reorganizing UMA

* Obsoletes 3 offline page UMAs
* Moves UMA reporting and triggers for saving/deleting pages to model
* Adds capability to get free space and total page size to ArchiveManager

BUG=610870

Review-Url: https://codereview.chromium.org/1988973002
Cr-Commit-Position: refs/heads/master@{#394566}

Former-commit-id: 1dd3fa4cec92adb64af5e4a484bcd27074d60b4a