chrome/browser/android/offline_pages/offline_page_bridge.h
@@ -102,12 +102,6 @@ class OfflinePageBridge : public OfflinePageModel::Observer,
       JNIEnv* env,
       const base::android::JavaParamRef<jobject>& obj);
 
-  void RecordStorageHistograms(JNIEnv* env,
-                               const base::android::JavaParamRef<jobject>& obj,
-                               jlong total_space_bytes,
-                               jlong free_space_bytes,
-                               jboolean reporting_after_delete);
-
   base::android::ScopedJavaGlobalRef<jobject> java_ref() { return java_ref_; }
 
  private:
